deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-sapper
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-sapper
  template:
    metadata:
      labels:
        app: portfolio-sapper
    spec:
      containers:
        - name: portfolio
          image: jonesrussell/portfolio-app:1.0.0
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - www.jonesrussell42.xyz
      secretName: portfolio-tls
  rules:
    - host: www.jonesrussell42.xyz
      http:
        paths:
          - backend:
              serviceName: portfolio-sapper
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-sapper
spec:
  selector:
    app: portfolio-sapper
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
