kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-sapper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-sapper
  template:
    metadata:
      labels:
        app: portfolio-sapper
    spec:
      containers:
        - name: portfolio
          image: jonesrussell/portfolio-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - jonesrussell42.xyz
        - www.jonesrussell42.xyz
      secretName: portfolio-tls
  rules:
    - host: jonesrussell42.xyz
      http:
        paths:
          - backend:
              serviceName: portfolio-sapper
              servicePort: 5000
    - host: www.jonesrussell42.xyz
      http:
        paths:
          - backend:
              serviceName: portfolio-sapper
              servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-sapper
spec:
  selector:
    app: portfolio-sapper
  ports:
    - protocol: TCP
      port: 5000
  type: ClusterIP
